# Krypt0n

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  secret.kry  secrets.txt.kry  test.txt.kry
.github/workflows/: ci.yml
Docs/: architecture.md  benchmarks.md  format.md  phases.md  security.md
benches/: engine.rs  kdf.rs  memory_profile.rs  stream.rs
src/: engine.rs  error.rs  lib.rs  main.rs
src/crypto/: aead.rs  kdf.rs
src/envelope/: format.rs  mod.rs  parse.rs
src/stream/: decrypt.rs  encrypt.rs
tests/: crypto.rs  engine.rs  envelope.rs  error_surface.rs  stream.rs
