[package]
name = "krypton"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
argon2 = "0.5"
rand_core = "0.6"
zeroize = "1.7"
chacha20poly1305 = { version = "0.10"}
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "stream"
harness = false

[[bench]]
name = "kdf"
harness = false
